--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ body{
 img {
   display:block;
 }
+a{
+  text-decoration: none;
+}
 
 /* HEADER */
 header{
@@ -28,4 +31,67 @@ header .logo {
   bottom: 0;
   left:0;
   margin: auto 0;
+  display:none;
+}
+header .sub-menu {
+  display: flex;
+}
+header .sub-menu ul.menu{
+  font-family: Arial, sans-serif;
+  display:flex;
+}
+header .sub-menu ul.menu li{
+  position: relative;
+}
+header .sub-menu ul.menu li::before {
+  content:"";
+  /* display:block; */
+  width:1px;
+  height:12px;
+  background-color: #e5e5e5;
+  position:absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+header .sub-menu ul.menu li:first-child::before {
+  display: none;
+}
+header .sub-menu ul.menu li a{
+  font-size: 12px;
+  padding : 11px 16px;
+  display: block;
+  color: #656565;
+}
+header .sub-menu ul.menu li a:hover{
+  color: #000;
+}
+header .sub-menu .search{
+  height: 34px;
+  position:relative;
+}
+header .sub-menu .search input{
+  width: 36px;
+  height: 34px;
+  padding: 4px 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  border-radius: 5px;
+  outline: none;
+  color: #777;
+  background-color: #fff;
+  transition: width .4s;
+  font-size: 12px;
+}
+header .sub-menu .search input:focus{
+  width: 190px;
+  border-color: #669900;
+}
+header .sub-menu .search .material-symbols-outlined{
+  height: 24px;
+  position: absolute;
+  top:0;
+  bottom:0;
+  right:5px;
+  margin: auto;
 }
