서브메뉴 배치 및 배경 완료

--- a/css/main.css
+++ b/css/main.css
@@ -15,13 +15,13 @@ a{
 
 /* HEADER */
 header{
-  background-color: royalblue;
+  background-color: #f6f5f0;
+  border-bottom : 1px solid #c8c8c8;
 }
 header .inner {
   width: 1100px;
   height: 120px;
   margin: 0 auto;
-  background-color: orange;
   position: relative;
 }
 header .logo {
@@ -31,9 +31,12 @@ header .logo {
   bottom: 0;
   left:0;
   margin: auto 0;
-  display:none;
+  /* display:none; */
 }
 header .sub-menu {
+  position: absolute;
+  top: 10px;
+  right: 0;
   display: flex;
 }
 header .sub-menu ul.menu{
@@ -94,4 +97,8 @@ header .sub-menu .search .material-symbols-outlined{
   bottom:0;
   right:5px;
   margin: auto;
+  transition: 0.4s;
+}
+header .sub-menu .search.focused .material-symbols-outlined{
+  opacity: 0;
 }
