--- a/css/main.css
+++ b/css/main.css
@@ -155,12 +155,12 @@ header .main-menu .item:hover .item__contents .contents__menu > ul > li ul li{
   padding: 5px 0;
   font-size: 12px;
   color:#999;
-  cursor:pointer;
+  cursor: pointer;
 }
-header .main-menu .item:hover .item__contents .contents__texture{
-  background-color: royalblue;
+header .main-menu .item:hover .item__contents .contents__texture{  
   padding:26px 0;
   font-size:12px;
+  background-image: url('../images/main_menu_pattern.jpg');
 }
 header .main-menu .item:hover .item__contents .contents__texture h4{
   color:#999;  
