--- a/css/main.css
+++ b/css/main.css
@@ -7,16 +7,68 @@ body{
   font-family: 'Nanum Gothic', sans-serif;
   height: 3000px;
 }
-img {
+img{
   display:block;
 }
 a{
   text-decoration: none;
 }
-.inner {
+.inner{
   width: 1100px;
   margin: 0 auto;
   position: relative;
+}
+.btn{
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius:  4px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: .4s;
+}
+.btn:hover{
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--reverse{
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--reverse:hover{
+  background-color: transparent;
+  color: #333;
+}
+.btn.btn--brown{
+  border: 2px solid #592B18;
+  color: #592B18;
+}
+.btn.btn--brown:hover{
+  background-color: #592B18;
+  color: #fff;
+}
+.btn.btn--gold{
+  /* background-color: transparent; */
+  border: 2px solid #d9aa8a;
+  color: #d9aa8a;
+}
+.btn.btn--gold:hover{
+  background-color: #d9aa8a;
+  color: #fff;
+}
+.btn.btn--white{
+  /* background-color: transparent; */
+  border: 2px solid #fff;
+  color: #fff;
+}
+.btn.btn--gold:hover{
+  background-color: #fff;
+  color: #333;
 }
 
 /* HEADER */
@@ -26,6 +78,7 @@ header{
   border-bottom : 1px solid #c8c8c8;
   position: fixed;
   top: 0;
+  z-index:9;
 }
 header > .inner {  
   height: 120px;
@@ -184,11 +237,60 @@ header .badges {
   right: 12px;
   /* z-index: 2; */
 }
-
 header .badges .badge{
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 12px;
   box-shadow: 4px 4px 10px rgb(0,0,0,.15);
   cursor: pointer;
+}
+
+
+/*VISUAL*/
+.visual{
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg");
+  background-position: center;
+}
+
+.visual > .inner{
+  height: 646px;
+}
+.visual .title{
+  position: absolute;
+  top: 88px;
+  left:-10px;
+}
+.visual .title .btn{
+  position:absolute;
+  top:259px;
+  left: 173px;
+}
+.visual .cup1.image{
+  position: absolute;
+  bottom: 0;
+  right:-47px;
+}
+.visual .cup1.text{
+  position: absolute;
+  bottom: 38px;
+  right:171px;
+}
+.visual .cup2.image{
+  position: absolute;
+  bottom: 0;
+  right:162px;
+}
+.visual .cup2.text{
+  position: absolute;
+  bottom: 321px;
+  right:416px;
+}
+.visual .spoon{
+  position: absolute;
+  bottom: 0;
+  left:275px;
+}
+.visual .fade-in{
+  opacity: 0;
 }
