--- a/css/main.css
+++ b/css/main.css
@@ -335,10 +335,18 @@ header .badges .badge{
   font-weight: 700;
   margin-left: 20px;
 }
-.notice .notice-line .inner .inner__left .swiper-container{
+.notice .notice-line .inner .inner__left .swiper{
   height: 62px;
-  background-color: orange;
   flex-grow: 1;
+}
+.notice .notice-line .inner .inner__left .swiper .swiper-slide{
+  height: 62px;
+  display: flex;
+  margin-left:10px;
+  align-items: center;
+}
+.notice .notice-line .inner .inner__left .swiper .swiper-slide a{
+  color: #fff;
 }
 .notice .notice-line .inner .inner__left .notice-line__more{
   width: 62px;
@@ -372,4 +380,13 @@ header .badges .badge{
 }
 .notice .notice-line .inner .inner__right .toggle-promotion .material-symbols-outlined{
   font-size: 30px;  
+}
+
+
+/*PROMOTION*/
+.notice .promotion{
+
+}
+.notice .promotion .swipe{
+  
 }
