--- a/css/main.css
+++ b/css/main.css
@@ -385,8 +385,84 @@ header .badges .badge{
 
 /*PROMOTION*/
 .notice .promotion{
+  height: 693px;
+  background-color: #f6f5ef;
+  position:relative;
+}
+.notice .promotion .swiper{
+  width: calc(819px * 3 + 20px);
+  height: 553px;
+  position:absolute;
+  top:40px;
+  left:50%;
+  margin-left: calc((819px * 3 + 20px)/-2);
+}
+.notice .promotion .swiper-slide{ 
+  opacity: 0.5;
+  transition: opacity 1s;
+  position: relative;
+}
+.notice .promotion .swiper-slide-active{ 
+  opacity: 1;
+}
+.notice .promotion .swiper-slide .btn{ 
+ position: absolute;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ margin: auto;
+}
+.notice .promotion .swiper-pagination{ 
+  bottom:40px;
+  left:0;
+  right:0;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet{
+  background-image: url(../images/promotion_slide_pager.png);
+  /* background-color: transparent; */
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+  outline: none;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child{
+  margin-right: 0;
+}
+.notice .promotion .swiper-pagination .swiper-pagination-bullet-active{
+  background-image: url("../images/promotion_slide_pager_on.png");
+}
+.notice .promotion .swiper-button-prev,
+.notice .promotion .swiper-button-next{
+  color: #333;
+  width: 42px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  top:300px;
+  z-index:1;
+  cursor: pointer;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .4s;
 
 }
-.notice .promotion .swipe{
-  
+.notice .promotion .swiper-button-next::after, 
+.notice .promotion .swiper-button-prev::after {
+  content: "";
+}
+.notice .promotion .swiper-button-prev{
+  left: 50px;
+  margin-left: 0px;
+}
+.notice .promotion .swiper-button-next{
+  right: 50px;
+  margin-right: 0px;
+}
+.notice .promotion .swiper-button-prev:hover,
+.notice .promotion .swiper-button-next:hover{
+  background-color: #333;
+  color: #fff;
 }
