--- a/css/main.css
+++ b/css/main.css
@@ -470,3 +470,46 @@ header .badges .badge{
   background-color: #333;
   color: #fff;
 }
+
+/* REWARDS */
+.rewards{
+  position: relative;
+}
+.rewards .bg-left{
+  width:50%;
+  height:100%;
+  background-color: #272727;
+  top:0;
+  left:0;
+  position: absolute;
+}
+.rewards .bg-right{
+  width:50%;
+  height:100%;
+  background-color: #d5c798;
+  top:0;
+  right:0;
+  position: absolute;  
+}
+.rewards .inner{
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+.rewards .inner .btn-group{
+  width: 250px;
+  display: flex;
+  flex-wrap: wrap;/*250ox 넘으면 줄바꿈을 허용하겠다는 설정*/
+  position:absolute;
+  bottom:24px;
+  right:0;
+}
+.rewards .inner .btn-group .btn.sign-up{
+  margin-right:10px;
+}
+.rewards .inner .btn-group .btn.sign-in{
+  width:110px;
+}
+.rewards .inner .btn-group .btn.gift{
+  flex-grow: 1;
+  margin-top: 10px;
+}
